--- a/trabalho5_final/pubspec.yaml
+++ b/trabalho5_final/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  provider: ^6.0.3
   cupertino_icons: ^1.0.2
   sqflite: ^2.0.0+3
   path_provider: ^2.0.2
