--- a/trabalho5_final/pubspec.yaml
+++ b/trabalho5_final/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   sqflite: ^2.0.0+3
   path_provider: ^2.0.2
+  firebase_core: ^1.20.0
+  firebase_database: ^9.0.20
 
 dev_dependencies:
   flutter_test:
